chore: update all urls in PL patterns to be hash bangs (BDS-435)

--- a/apps/pattern-lab/src/_patterns/02-components/action-blocks/05-action-blocks.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/action-blocks/05-action-blocks.twig
@@ -2,7 +2,7 @@
   contentItems: [
     {
       text: "Item 1",
-      url: "http://google.com",
+      url: "#!",
       icon: {
         name: "download",
         size: "large",
@@ -11,7 +11,7 @@
     },
     {
       text: "Item 2",
-      url: "http://google.com",
+      url: "#!",
       icon: {
         name: "copy-to-clipboard",
         size: "large",
@@ -20,7 +20,7 @@
     },
     {
       text: "Item 3",
-      url: "http://google.com",
+      url: "#!",
       icon: {
         name: "calendar",
         size: "large",
