--- a/apps/pattern-lab/src/_patterns/02-components/action-blocks/10-action-blocks-border-variation.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/action-blocks/10-action-blocks-border-variation.twig
@@ -15,7 +15,7 @@
       },
       {
         text: "Item 2",
-        url: "http://google.com",
+        url: "#!",
         icon: {
           name: "copy-to-clipboard",
           size: "large",
@@ -24,7 +24,7 @@
       },
       {
         text: "Item 3",
-        url: "http://google.com",
+        url: "#!",
         icon: {
           name: "calendar",
           size: "large",
