--- a/apps/pattern-lab/src/_patterns/02-components/action-blocks/20-action-blocks-theme-variation.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/action-blocks/20-action-blocks-theme-variation.twig
@@ -9,7 +9,7 @@
         contentItems: [
           {
             text: "Item 1, Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus dignissim non dui vel elementum. Cras id lorem tincidunt turpis mollis pretium. ",
-            url: "http://google.com",
+            url: "#!",
             icon: {
               name: "download",
               size: "large",
@@ -18,7 +18,7 @@
           },
           {
             text: "Item 2",
-            url: "http://google.com",
+            url: "#!",
             icon: {
               name: "copy-to-clipboard",
               size: "large",
@@ -27,7 +27,7 @@
           },
           {
             text: "Item 3",
-            url: "http://google.com",
+            url: "#!",
             icon: {
               name: "calendar",
               size: "large",
@@ -36,7 +36,7 @@
           },
           {
             text: "Item 4",
-            url: "http://google.com",
+            url: "#!",
             icon: {
             name: "copy-to-clipboard",
             size: "large",
