--- a/apps/pattern-lab/src/_patterns/02-components/block-list/05-block-list.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/block-list/05-block-list.twig
@@ -2,7 +2,7 @@
   "items" : [
     include("@bolt-components-link/link.twig", {
       text: "Link 1",
-      url: "#",
+      url: "#!",
       icon: {
         name: "chevron-right",
         position: "before"
@@ -10,7 +10,7 @@
     }),
     include("@bolt-components-link/link.twig", {
       text: "Link 2",
-      url: "#",
+      url: "#!",
       icon: {
         name: "chevron-right",
         position: "before"
@@ -18,7 +18,7 @@
     }),
     include("@bolt-components-link/link.twig", {
       text: "Link 3",
-      url: "#",
+      url: "#!",
       icon: {
         name: "chevron-right",
         position: "before"
