--- a/apps/pattern-lab/src/_patterns/02-components/block-list/10-block-list-theme-variation.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/block-list/10-block-list-theme-variation.twig
@@ -6,7 +6,7 @@
         "items" : [
           include("@bolt-components-link/link.twig", {
             text: "Link 1",
-            url: "#",
+            url: "#!",
             icon: {
               name: "chevron-right",
               position: "before"
@@ -14,7 +14,7 @@
           }),
           include("@bolt-components-link/link.twig", {
             text: "Link 2",
-            url: "#",
+            url: "#!",
             icon: {
               name: "chevron-right",
               position: "before"
@@ -22,7 +22,7 @@
           }),
           include("@bolt-components-link/link.twig", {
             text: "Link 3",
-            url: "#",
+            url: "#!",
             icon: {
               name: "chevron-right",
               position: "before"
