--- a/apps/pattern-lab/src/_patterns/02-components/breadcrumb/05-breadcrumb.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/breadcrumb/05-breadcrumb.twig
@@ -2,15 +2,15 @@
   "contentItems": [
     include("@bolt-components-link/link.twig", {
       "text": "Home",
-      "url": "#"
+      "url": "#!"
     }),
     include("@bolt-components-link/link.twig", {
       "text": "Landing Page",
-      "url": "#"
+      "url": "#!"
     }),
     include("@bolt-components-link/link.twig", {
       "text": "Sub Page",
-      "url": "#"
+      "url": "#!"
     }),
     "Current Page"
   ]
