--- a/apps/pattern-lab/src/_patterns/02-components/breadcrumb/10-breadcrumb-current-page-aria-variation.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/breadcrumb/10-breadcrumb-current-page-aria-variation.twig
@@ -2,19 +2,19 @@
   "contentItems": [
     include("@bolt-components-link/link.twig", {
       "text": "Home",
-      "url": "#"
+      "url": "#!"
     }),
     include("@bolt-components-link/link.twig", {
       "text": "Landing Page",
-      "url": "#"
+      "url": "#!"
     }),
     include("@bolt-components-link/link.twig", {
       "text": "Sub Page",
-      "url": "#"
+      "url": "#!"
     }),
     include("@bolt-components-link/link.twig", {
       "text": "Current Page",
-      "url": "#",
+      "url": "#!",
       "attributes": {
         "aria-current": "page"
       },
