--- a/apps/pattern-lab/src/_patterns/02-components/card/20-card-with-video.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/card/20-card-with-video.twig
@@ -2,7 +2,7 @@
 
 <div style="max-width: 500px; padding: 2rem;">
   {% include "@bolt-components-card/card.twig" with {
-    "url": "javascript:",
+    "url": "#!",
     "contentItems": [
       {
         "pattern": "video",
