--- a/apps/pattern-lab/src/_patterns/02-components/chips-list/05-chip-list.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/chips-list/05-chip-list.twig
@@ -2,19 +2,19 @@
   "contentItems": [
     {
       text: "Do not include any data or information in your posts that are confidential!",
-      url: "javascript:"
+      url: "#!"
     },
     {
       text: "Apply basic practices for collaborative work.",
-      url: "javascript:"
+      url: "#!"
     },
     {
       text: "Be honest, respectful, trustworthy and helpful.",
-      url: "javascript:"
+      url: "#!"
     },
     {
       text: "Answer questions authoritatively and concisely. Avoid cluttering discussions with noise.",
-      url: "javascript:"
+      url: "#!"
     }
   ]
 } %}
