--- a/apps/pattern-lab/src/_patterns/02-components/dropdown/05-dropdown.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/dropdown/05-dropdown.twig
@@ -6,19 +6,19 @@
       "items": [
         include("@bolt-components-link/link.twig", {
           "text": "Link 1 Text",
-          "url": "#link-1-url"
+          "url": "#!"
         }),
         include("@bolt-components-link/link.twig", {
           "text": "Link 2 Text",
-          "url": "#link-2-url"
+          "url": "#!"
         }),
         include("@bolt-components-link/link.twig", {
           "text": "Link 3 Text",
-          "url": "#link-3-url"
+          "url": "#!"
         }),
         include("@bolt-components-link/link.twig", {
           "text": "Link 4 Text",
-          "url": "#link-4-url"
+          "url": "#!"
         }),
       ]
     } %}
