--- a/apps/pattern-lab/src/_patterns/02-components/dropdown/30-dropdown-custom-element-demo-collection.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/dropdown/30-dropdown-custom-element-demo-collection.twig
@@ -14,19 +14,19 @@
     "items": [
       include("@bolt-components-link/link.twig", {
         "text": "Link 1 Text",
-        "url": "#link-1-url"
+        "url": "#!"
       }),
       include("@bolt-components-link/link.twig", {
         "text": "Link 2 Text",
-        "url": "#link-2-url"
+        "url": "#!"
       }),
       include("@bolt-components-link/link.twig", {
         "text": "Link 3 Text",
-        "url": "#link-3-url"
+        "url": "#!"
       }),
       include("@bolt-components-link/link.twig", {
         "text": "Link 4 Text",
-        "url": "#link-4-url"
+        "url": "#!"
       }),
     ]
   } %}
@@ -41,19 +41,19 @@
     "items": [
       include("@bolt-components-link/link.twig", {
         "text": "Link 1 Text",
-        "url": "#link-1-url"
+        "url": "#!"
       }),
       include("@bolt-components-link/link.twig", {
         "text": "Link 2 Text",
-        "url": "#link-2-url"
+        "url": "#!"
       }),
       include("@bolt-components-link/link.twig", {
         "text": "Link 3 Text",
-        "url": "#link-3-url"
+        "url": "#!"
       }),
       include("@bolt-components-link/link.twig", {
         "text": "Link 4 Text",
-        "url": "#link-4-url"
+        "url": "#!"
       }),
     ]
   } %}
@@ -68,19 +68,19 @@
     "items": [
       include("@bolt-components-link/link.twig", {
         "text": "Link 1 Text",
-        "url": "#link-1-url"
+        "url": "#!"
       }),
       include("@bolt-components-link/link.twig", {
         "text": "Link 2 Text",
-        "url": "#link-2-url"
+        "url": "#!"
       }),
       include("@bolt-components-link/link.twig", {
         "text": "Link 3 Text",
-        "url": "#link-3-url"
+        "url": "#!"
       }),
       include("@bolt-components-link/link.twig", {
         "text": "Link 4 Text",
-        "url": "#link-4-url"
+        "url": "#!"
       }),
     ]
   } %}
@@ -96,19 +96,19 @@
     "items": [
       include("@bolt-components-link/link.twig", {
         "text": "Link 1 Text",
-        "url": "#link-1-url"
+        "url": "#!"
       }),
       include("@bolt-components-link/link.twig", {
         "text": "Link 2 Text",
-        "url": "#link-2-url"
+        "url": "#!"
       }),
       include("@bolt-components-link/link.twig", {
         "text": "Link 3 Text",
-        "url": "#link-3-url"
+        "url": "#!"
       }),
       include("@bolt-components-link/link.twig", {
         "text": "Link 4 Text",
-        "url": "#link-4-url"
+        "url": "#!"
       }),
     ]
   } %}
@@ -125,19 +125,19 @@
       "items": [
         include("@bolt-components-link/link.twig", {
           "text": "Link 1 Text",
-          "url": "#"
+          "url": "#!"
         }),
         include("@bolt-components-link/link.twig", {
           "text": "Link 2 Text",
-          "url": "#"
+          "url": "#!"
         }),
         include("@bolt-components-link/link.twig", {
           "text": "Link 3 Text",
-          "url": "#"
+          "url": "#!"
         }),
         include("@bolt-components-link/link.twig", {
           "text": "Link 4 Text",
-          "url": "#"
+          "url": "#!"
         }),
       ]
     } %}
@@ -153,35 +153,35 @@
     "items": [
       include("@bolt-components-link/link.twig", {
         "text": "Link 1 Text",
-        "url": "#"
+        "url": "#!"
       }),
       include("@bolt-components-link/link.twig", {
         "text": "Link 2 Text",
-        "url": "#"
+        "url": "#!"
       }),
       include("@bolt-components-link/link.twig", {
         "text": "Link 3 Text",
-        "url": "#"
+        "url": "#!"
       }),
       include("@bolt-components-link/link.twig", {
         "text": "Link 4 Text",
-        "url": "#"
+        "url": "#!"
       }),
       include("@bolt-components-link/link.twig", {
         "text": "Link 5 Text",
-        "url": "#"
+        "url": "#!"
       }),
       include("@bolt-components-link/link.twig", {
         "text": "Link 6 Text",
-        "url": "#"
+        "url": "#!"
       }),
       include("@bolt-components-link/link.twig", {
         "text": "Link 7 Text",
-        "url": "#"
+        "url": "#!"
       }),
       include("@bolt-components-link/link.twig", {
         "text": "Link 8 Text",
-        "url": "#"
+        "url": "#!"
       }),
     ]
   } %}
