--- a/apps/pattern-lab/src/_patterns/02-components/link/10-link-icon-variation.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/link/10-link-icon-variation.twig
@@ -2,7 +2,7 @@
 <p>
   {% include "@bolt-components-link/link.twig" with {
     text: "Like This",
-    url: "http://google.com",
+    url: "#!",
     icon: {
       name: "info-open",
     },
@@ -12,7 +12,7 @@
 <p>
   {% include "@bolt-components-link/link.twig" with {
     text: "Like This",
-    url: "http://google.com",
+    url: "#!",
     icon: {
       name: "info-open",
       position: "before"
