--- a/apps/pattern-lab/src/_patterns/02-components/link/15-link-theme-variation.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/link/15-link-theme-variation.twig
@@ -1,11 +1,11 @@
 {% set link %}
   {% include "@bolt-components-headline/headline.twig" with {
     text: "Headline Link with Default Icon",
-    url: "javascript:"
+    url: "#!"
   } only %}
   {% include "@bolt-components-link/link.twig" with {
     text: "Text link",
-    url: "javascript:"
+    url: "#!"
   } only %}
 {% endset %}
 
