--- a/apps/pattern-lab/src/_patterns/02-components/navbar/05-navbar-short.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/navbar/05-navbar-short.twig
@@ -9,19 +9,19 @@
   "links": [
     {
       "text": "Features",
-      "url": "link-1-url"
+      "url": "#!"
     },
     {
       "text": "Resources",
-      "url": "link-2-url"
+      "url": "#!"
     },
     {
       "text": "Industry Apps",
-      "url": "link-3-url"
+      "url": "#!"
     },
     {
       "text": "Customer Success",
-      "url": "link-1-url"
+      "url": "#!"
     }
   ]
 } %}
