--- a/apps/pattern-lab/src/_patterns/02-components/navbar/10-navbar-theme-variation.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/navbar/10-navbar-theme-variation.twig
@@ -21,15 +21,15 @@
       "links": [
         {
           "text": "Link 1 Text",
-          "url": "javascript:"
+          "url": "#!"
         },
         {
           "text": "Link 2 Text",
-          "url": "javascript:"
+          "url": "#!"
         },
         {
           "text": "Link 3 Text",
-          "url": "javascript:"
+          "url": "#!"
         }
       ]
     } %}
