--- a/apps/pattern-lab/src/_patterns/04-pages/10-homepage/-00-homepage.twig
+++ b/apps/pattern-lab/src/_patterns/04-pages/10-homepage/-00-homepage.twig
@@ -98,7 +98,7 @@
         {
           text: "Get Real",
           style: "primary",
-          url: "https://www.google.com",
+          url: "#!",
           icon: {
             name: "chevron-right"
           }
@@ -317,21 +317,21 @@
   "contentItems": [
     {
       text: "Product Information",
-      url: "http://google.com",
+      url: "#!",
       icon: {
         name: "product"
       }
     },
     {
       text: "Industry Solutions",
-      url: "http://google.com",
+      url: "#!",
       icon: {
         name: "industries"
       }
     },
     {
       text: "Training and Certification",
-      url: "http://google.com",
+      url: "#!",
       icon: {
         name: "training",
         background: "circle"
@@ -339,7 +339,7 @@
     },
     {
       text: "Vision and Technology",
-      url: "http://google.com",
+      url: "#!",
       icon: {
         name: "vision",
         background: "circle"
@@ -347,7 +347,7 @@
     },
     {
       text: "Services and Partners",
-      url: "http://google.com",
+      url: "#!",
       icon: {
         name: "partners",
         background: "square"
@@ -355,7 +355,7 @@
     },
     {
       text: "Career Opportunities",
-      url: "http://google.com",
+      url: "#!",
       icon: {
         name: "careers",
         background: "square"
