--- a/apps/pattern-lab/src/_patterns/04-pages/30-product-pages/-product-landing-page.twig
+++ b/apps/pattern-lab/src/_patterns/04-pages/30-product-pages/-product-landing-page.twig
@@ -55,7 +55,7 @@
         {
           text: "Call to Action",
           style: "primary",
-          url: "https://www.google.com"
+          url: "#!"
         }
       ]
     }
@@ -92,7 +92,7 @@
                 {
                   pattern: "flag",
                   valign: "middle",
-                  url: "https://www.google.com",
+                  url: "#!",
                   figure: {
                     "icon": {
                       name: "app-development",
@@ -125,7 +125,7 @@
                 {
                   pattern: "flag",
                   valign: "middle",
-                  url: "https://www.google.com",
+                  url: "#!",
                   figure: {
                     "icon": {
                       name: "sales-automation",
@@ -158,7 +158,7 @@
                 {
                   pattern: "flag",
                   valign: "middle",
-                  url: "https://www.google.com",
+                  url: "#!",
                   figure: {
                     "icon": {
                       name: "customer-service",
