--- a/apps/pattern-lab/src/_patterns/04-pages/30-product-pages/-product-t2-page.twig
+++ b/apps/pattern-lab/src/_patterns/04-pages/30-product-pages/-product-t2-page.twig
@@ -48,7 +48,7 @@
         {
           text: "Call to Action",
           style: "primary",
-          url: "https://www.google.com"
+          url: "#!"
         }
       ]
     }
@@ -94,7 +94,7 @@
                 {
                   pattern: "flag",
                   valign: "middle",
-                  url: "https://www.google.com",
+                  url: "#!",
                   figure: {
                     "icon": {
                       name: "app-development",
@@ -123,7 +123,7 @@
                 {
                   pattern: "flag",
                   valign: "middle",
-                  url: "https://www.google.com",
+                  url: "#!",
                   figure: {
                     "icon": {
                       name: "sales-automation",
@@ -151,7 +151,7 @@
                 {
                   pattern: "flag",
                   valign: "middle",
-                  url: "https://www.google.com",
+                  url: "#!",
                   figure: {
                     "icon": {
                       name: "customer-service",
