--- a/apps/pattern-lab/src/_patterns/04-pages/40-full-page-theming/_full-page-theming.twig
+++ b/apps/pattern-lab/src/_patterns/04-pages/40-full-page-theming/_full-page-theming.twig
@@ -93,17 +93,17 @@
         {
           text: "Sign Up",
           style: "primary",
-          url: "https://www.google.com"
+          url: "#!"
         },
         {
           text: "Learn More",
           style: "secondary",
-          url: "https://www.google.com"
+          url: "#!"
         },
         {
           text: "Read More",
           style: "text",
-          url: "https://www.google.com",
+          url: "#!",
           icon: {
             name: "chevron-right"
           }
