--- a/apps/pattern-lab/src/_patterns/04-pages/60-d8-homepage/-10-d8-homepage-alt.twig
+++ b/apps/pattern-lab/src/_patterns/04-pages/60-d8-homepage/-10-d8-homepage-alt.twig
@@ -77,7 +77,7 @@
         {
           text: "Call to action",
           style: "primary",
-          url: "https://www.google.com"
+          url: "#!"
         }
       ]
     },
