--- a/apps/pattern-lab/src/_patterns/04-pages/60-d8-homepage/-20-d8-homepage-video-test.twig
+++ b/apps/pattern-lab/src/_patterns/04-pages/60-d8-homepage/-20-d8-homepage-video-test.twig
@@ -116,7 +116,7 @@
         {
           text: "Get Real",
           style: "primary",
-          url: "https://www.google.com",
+          url: "#!",
           icon: {
             name: "chevron-right"
           }
