--- a/apps/pattern-lab/src/_patterns/04-pages/70-d8-agenda-manager/-agenda-manager-detail.twig
+++ b/apps/pattern-lab/src/_patterns/04-pages/70-d8-agenda-manager/-agenda-manager-detail.twig
@@ -26,7 +26,7 @@
         text: "2018 Agenda",
         size: "small",
         tag: "span",
-        url: "#",
+        url: "#!",
         icon: {
           name: "arrow-left",
           position: "before"
@@ -308,7 +308,7 @@
             text: "What Aflac is learning about consumer expectations through monitoring tech disruptions",
             size: "large",
             tag: "h3",
-            url: "#"
+            url: "#!"
           } only %}
         {% endcell %}
 
@@ -321,7 +321,7 @@
             text: "Leverage Mobile and Collaboration to Increase Revenue and Decrease Order-to-Cash Cycle Time",
             size: "large",
             tag: "h3",
-            url: "#"
+            url: "#!"
           } only %}
         {% endcell %}
 
@@ -334,7 +334,7 @@
             text: "PayPal Delivers World Class Customer Service, Worldwide",
             size: "large",
             tag: "h3",
-            url: "#"
+            url: "#!"
           } only %}
         {% endcell %}
 
@@ -407,19 +407,19 @@
           {% set socialIcons = [
             {
               name: "twitter",
-              url: "#"
+              url: "#!"
             },
             {
               name: "facebook-solid",
-              url: "#"
+              url: "#!"
             },
             {
               name: "linkedin-solid",
-              url: "#"
+              url: "#!"
             },
             {
               name: "youtube-solid",
-              url: "#"
+              url: "#!"
             }
           ] %}
 
