--- a/apps/pattern-lab/src/_patterns/04-pages/80-events/event-detail.twig
+++ b/apps/pattern-lab/src/_patterns/04-pages/80-events/event-detail.twig
@@ -42,7 +42,7 @@
               text: "January 25, 2018",
               size: "large",
               tag: "span",
-              url: "#",
+              url: "#!",
               icon: {
                 name: "calendar",
                 position: "before",
@@ -55,7 +55,7 @@
               text: "10:00 AM EST",
               size: "large",
               tag: "span",
-              url: "#",
+              url: "#!",
               icon: {
                 name: "watch",
                 position: "before",
@@ -68,7 +68,7 @@
               text: "New York, NY",
               size: "large",
               tag: "span",
-              url: "#",
+              url: "#!",
               icon: {
                 name: "map-pin",
                 position: "before",
@@ -375,7 +375,7 @@
             <p>Executive Director, My Company</p>
             {% include "@bolt-components-link/link.twig" with {
               text: "Show more",
-              url: "#",
+              url: "#!",
             } only %}
 
             {% include "@pl/_event-annotation.twig" with {
@@ -404,7 +404,7 @@
             <p>Executive Director, My Company</p>
             {% include "@bolt-components-link/link.twig" with {
               text: "Show more",
-              url: "#",
+              url: "#!",
             } only %}
           {% endcell %}
         {% endgrid %}
@@ -426,7 +426,7 @@
             <p>Executive Director, My Company</p>
             {% include "@bolt-components-link/link.twig" with {
               text: "Show more",
-              url: "#",
+              url: "#!",
             } only %}
           {% endcell %}
         {% endgrid %}
@@ -448,7 +448,7 @@
             <p>Executive Director, My Company</p>
             {% include "@bolt-components-link/link.twig" with {
               text: "Show more",
-              url: "#",
+              url: "#!",
             } only %}
           {% endcell %}
         {% endgrid %}
@@ -470,7 +470,7 @@
             <p>Executive Director, My Company</p>
             {% include "@bolt-components-link/link.twig" with {
               text: "Show more",
-              url: "#",
+              url: "#!",
             } only %}
           {% endcell %}
         {% endgrid %}
@@ -492,7 +492,7 @@
             <p>Executive Director, My Company</p>
             {% include "@bolt-components-link/link.twig" with {
               text: "Show more",
-              url: "#",
+              url: "#!",
             } only %}
           {% endcell %}
         {% endgrid %}
