--- a/apps/pattern-lab/src/_patterns/04-pages/80-events/event-landing.twig
+++ b/apps/pattern-lab/src/_patterns/04-pages/80-events/event-landing.twig
@@ -70,7 +70,7 @@
               {% grid "o-bolt-grid--flex o-bolt-grid--matrix" %}
                 {% cell "u-bolt-width-1/1 u-bolt-width-1/2@medium" %}
                   {% embed "@bolt-components-card/card.twig" with {
-                    url: "#",
+                    url: "#!",
                     contentItems: [
                       {
                         pattern: "button",
@@ -104,7 +104,7 @@
                 {% cell "u-bolt-width-1/1 u-bolt-width-1/2@medium" %}
 
                   {% embed "@bolt-components-card/card.twig" with {
-                    url: "#",
+                    url: "#!",
                     contentItems: [
                       {
                         pattern: "button",
