--- a/apps/pattern-lab/src/_patterns/04-pages/90-content-hub/anchor-ribbon-example.twig
+++ b/apps/pattern-lab/src/_patterns/04-pages/90-content-hub/anchor-ribbon-example.twig
@@ -134,7 +134,7 @@
       
           {% cell "u-bolt-width-1/1 u-bolt-width-2/5@medium" %}
             {% include "@bolt-components-card/card.twig" with {
-              url: "javascript:",
+              url: "#!",
               contentItems: [
                 {
                   pattern: "image",
@@ -201,7 +201,7 @@
           {% endcell %}
           {% cell "u-bolt-width-1/1 u-bolt-width-2/5@small" %}
             {% include "@bolt-components-card/card.twig" with {
-              url: "javascript:",
+              url: "#!",
               contentItems: [
                 {
                   pattern: "image",
@@ -266,7 +266,7 @@
           {% endcell %}
           {% cell "u-bolt-width-1/1 u-bolt-width-2/5@medium" %}
             {% include "@bolt-components-card/card.twig" with {
-              url: "javascript:",
+              url: "#!",
               contentItems: [
                 {
                   pattern: "image",
@@ -334,7 +334,7 @@
           {% endcell %}
           {% cell "u-bolt-width-1/1 u-bolt-width-2/5@small" %}
             {% include "@bolt-components-card/card.twig" with {
-              url: "javascript:",
+              url: "#!",
               contentItems: [
                 {
                   pattern: "image",
@@ -399,7 +399,7 @@
           {% endcell %}
           {% cell "u-bolt-width-1/1 u-bolt-width-2/5@medium" %}
             {% include "@bolt-components-card/card.twig" with {
-              url: "javascript:",
+              url: "#!",
               contentItems: [
                 {
                   pattern: "image",
@@ -465,7 +465,7 @@
           {% endcell %}
           {% cell "u-bolt-width-1/1 u-bolt-width-2/5@small u-bolt-margin---small" %}
             {% include "@bolt-components-card/card.twig" with {
-              url: "javascript:",
+              url: "#!",
               contentItems: [
                 {
                   pattern: "image",
