--- a/apps/pattern-lab/src/_patterns/04-pages/99999-bolt-dev-sandbox/00-wysiwyg-kitchen-sink.twig
+++ b/apps/pattern-lab/src/_patterns/04-pages/99999-bolt-dev-sandbox/00-wysiwyg-kitchen-sink.twig
@@ -98,7 +98,7 @@ ClassicEditor
     <figure class="u-bolt-margin-bottom-medium">
       {% include "@bolt-components-link/link.twig" with {
         text: "Link is link component with default settings.",
-        url: "http://google.com",
+        url: "#!",
       } only %}
     </figure>
     <h3>Blockquote</h3>
