--- a/apps/pattern-lab/src/_patterns/02-components/action-blocks/15-action-blocks-max-items-per-row-variation.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/action-blocks/15-action-blocks-max-items-per-row-variation.twig
@@ -8,7 +8,7 @@
       contentItems: [
         {
           text: "Item 1, Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus dignissim non dui vel elementum. Cras id lorem tincidunt turpis mollis pretium. ",
-          url: "http://google.com",
+          url: "#!",
           icon: {
             name: "download",
             size: "large",
@@ -17,7 +17,7 @@
         },
         {
           text: "Item 2",
-          url: "http://google.com",
+          url: "#!",
           icon: {
             name: "copy-to-clipboard",
             size: "large",
@@ -26,7 +26,7 @@
         },
         {
           text: "Item 3",
-          url: "http://google.com",
+          url: "#!",
           icon: {
             name: "calendar",
             size: "large",
@@ -35,7 +35,7 @@
         },
         {
           text: "Item 4",
-          url: "http://google.com",
+          url: "#!",
           icon: {
           name: "copy-to-clipboard",
           size: "large",
@@ -44,7 +44,7 @@
         },
         {
           text: "Item 5, Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus dignissim non dui vel elementum. Cras id lorem tincidunt turpis mollis pretium. ",
-          url: "http://google.com",
+          url: "#!",
           icon: {
           name: "download",
           size: "large",
@@ -53,7 +53,7 @@
         },
         {
           text: "Item 5",
-          url: "http://google.com",
+          url: "#!",
           icon: {
           name: "copy-to-clipboard",
           size: "large",
