--- a/apps/pattern-lab/src/_patterns/02-components/band/30-band-collection-variation.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/band/30-band-collection-variation.twig
@@ -55,7 +55,7 @@
           {
             text: "Learn More About Pega 7",
             style: "secondary",
-            url: "www.google.com/pega7"
+            url: "#!"
           }
         ]
       }
@@ -139,7 +139,7 @@
             {
               text: "Learn More About Pega 7",
               style: "secondary",
-              url: "www.google.com/pega7"
+              url: "#!"
             }
           ]
         }
@@ -167,7 +167,7 @@
             {
               text: "Learn More About Pega 7",
               style: "secondary",
-              url: "www.google.com/pega7"
+              url: "#!"
             }
           ]
         }
