--- a/apps/pattern-lab/src/_patterns/02-components/card/15-card-with-teaser.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/card/15-card-with-teaser.twig
@@ -1,5 +1,5 @@
 {% include "@bolt-components-card/card.twig" with {
-  url: "javascript:",
+  url: "#!",
   contentItems: [
     {
       pattern: "image",
