--- a/apps/pattern-lab/src/_patterns/02-components/dropdown/16-dropdown-collapse-center.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/dropdown/16-dropdown-collapse-center.twig
@@ -8,35 +8,35 @@
       "items": [
         include("@bolt-components-link/link.twig", {
           "text": "Link 1 Text",
-          "url": "#link-1-url"
+          "url": "#!"
         }),
         include("@bolt-components-link/link.twig", {
           "text": "Link 2 Text",
-          "url": "#link-2-url"
+          "url": "#!"
         }),
         include("@bolt-components-link/link.twig", {
           "text": "Link 3 Text",
-          "url": "#link-3-url"
+          "url": "#!"
         }),
         include("@bolt-components-link/link.twig", {
           "text": "Link 4 Text",
-          "url": "#link-4-url"
+          "url": "#!"
         }),
         include("@bolt-components-link/link.twig", {
           "text": "Link 5 Text",
-          "url": "#link-5-url"
+          "url": "#!"
         }),
         include("@bolt-components-link/link.twig", {
           "text": "Link 6 Text",
-          "url": "#link-6-url"
+          "url": "#!"
         }),
         include("@bolt-components-link/link.twig", {
           "text": "Link 7 Text",
-          "url": "#link-7-url"
+          "url": "#!"
         }),
         include("@bolt-components-link/link.twig", {
           "text": "Link 8 Text",
-          "url": "#link-8-url"
+          "url": "#!"
         }),
       ]
     } %}
