--- a/apps/pattern-lab/src/_patterns/02-components/headline/30-headline-link-variations.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/headline/30-headline-link-variations.twig
@@ -1,16 +1,16 @@
 {% include "@bolt-components-headline/headline.twig" with {
   text: "This headline is a link, with Default Icon",
-  url: "https://www.google.com"
+  url: "#!"
 } only %}
 
 {% include "@bolt-components-headline/headline.twig" with {
   text: "This headline is also a link, with Defined Icon",
-  url: "https://www.google.com",
+  url: "#!",
   icon: "search"
 } only %}
 
 {% include "@bolt-components-headline/headline.twig" with {
   text: "This headline is also a link, without an Icon",
-  url: "https://www.google.com",
+  url: "#!",
   icon: "none"
 } only %}
