--- a/apps/pattern-lab/src/_patterns/02-components/link/05-link.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/link/05-link.twig
@@ -1,4 +1,4 @@
 {% include "@bolt-components-link/link.twig" with {
   text: "This is a text link",
-  url: "http://google.com",
+  url: "#!",
 } only %}
