--- a/apps/pattern-lab/src/_patterns/02-components/navbar/05-navbar--centered.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/navbar/05-navbar--centered.twig
@@ -10,27 +10,27 @@
   links: [
     {
       "text": "Real-Time AI",
-      "url": "link-1-url"
+      "url": "#!"
     },
     {
       "text": "End-to-end Automation",
-      "url": "link-2-url"
+      "url": "#!"
     },
     {
       "text": "Journey-centric Delivery",
-      "url": "link-3-url"
+      "url": "#!"
     },
     {
       "text": "Low Code",
-      "url": "link-1-url"
+      "url": "#!"
     },
     {
       "text": "Multi-dimensional Power",
-      "url": "link-2-url"
+      "url": "#!"
     },
     {
       "text": "Cloud Choice",
-      "url": "link-3-url"
+      "url": "#!"
     }
   ]
 } %}
