--- a/apps/pattern-lab/src/_patterns/02-components/navbar/30-navbar-transparent.twig
+++ b/apps/pattern-lab/src/_patterns/02-components/navbar/30-navbar-transparent.twig
@@ -11,20 +11,20 @@
     "icon": {
       "name": "marketing-gray"
     },
-    "url": "https://www.google.com"
+    "url": "#!"
   },
   "links": [
     {
       "text": "Link 1 Text",
-      "url": "javascript:"
+      "url": "#!"
     },
     {
       "text": "Link 2 Text",
-      "url": "javascript:"
+      "url": "#!"
     },
     {
       "text": "Link 3 Text",
-      "url": "javascript:"
+      "url": "#!"
     }
   ]
 } %}
