--- a/apps/pattern-lab/src/_patterns/04-pages/10-homepage/-01-homepage-w-background-video.twig
+++ b/apps/pattern-lab/src/_patterns/04-pages/10-homepage/-01-homepage-w-background-video.twig
@@ -98,7 +98,7 @@
         {
           text: "Get Real",
           style: "primary",
-          url: "https://www.google.com",
+          url: "#!",
           icon: {
             name: "chevron-right"
           }
@@ -413,21 +413,21 @@
   "contentItems": [
     {
       text: "Product Information",
-      url: "http://google.com",
+      url: "#!",
       icon: {
         name: "product"
       }
     },
     {
       text: "Industry Solutions",
-      url: "http://google.com",
+      url: "#!",
       icon: {
         name: "industries"
       }
     },
     {
       text: "Training and Certification",
-      url: "http://google.com",
+      url: "#!",
       icon: {
         name: "training",
         background: "circle"
@@ -435,7 +435,7 @@
     },
     {
       text: "Vision and Technology",
-      url: "http://google.com",
+      url: "#!",
       icon: {
         name: "vision",
         background: "circle"
@@ -443,7 +443,7 @@
     },
     {
       text: "Services and Partners",
-      url: "http://google.com",
+      url: "#!",
       icon: {
         name: "partners",
         background: "square"
@@ -451,7 +451,7 @@
     },
     {
       text: "Career Opportunities",
-      url: "http://google.com",
+      url: "#!",
       icon: {
         name: "careers",
         background: "square"
