--- a/apps/pattern-lab/src/_patterns/04-pages/30-product-pages/-product-t4.twig
+++ b/apps/pattern-lab/src/_patterns/04-pages/30-product-pages/-product-t4.twig
@@ -47,7 +47,7 @@
         {
           text: "Call to Action",
           style: "primary",
-          url: "https://www.google.com"
+          url: "#!"
         }
       ]
     }
@@ -98,7 +98,7 @@
                 {
                   pattern: "flag",
                   valign: "middle",
-                  url: "https://www.google.com",
+                  url: "#!",
                   figure: {
                     "icon": {
                       name: "app-development",
@@ -127,7 +127,7 @@
                 {
                   pattern: "flag",
                   valign: "middle",
-                  url: "https://www.google.com",
+                  url: "#!",
                   figure: {
                     "icon": {
                       name: "sales-automation",
@@ -155,7 +155,7 @@
                 {
                   pattern: "flag",
                   valign: "middle",
-                  url: "https://www.google.com",
+                  url: "#!",
                   figure: {
                     "icon": {
                       name: "customer-service",
