--- a/apps/pattern-lab/src/_patterns/04-pages/60-d8-homepage/-15-d8-homepage-video-band.twig
+++ b/apps/pattern-lab/src/_patterns/04-pages/60-d8-homepage/-15-d8-homepage-video-band.twig
@@ -97,7 +97,7 @@
         {
           text: "Get Real",
           style: "primary",
-          url: "https://www.google.com",
+          url: "#!",
           icon: {
             name: "chevron-right"
           }
@@ -490,21 +490,21 @@
   "contentItems": [
     {
       text: "Product Information",
-      url: "http://google.com",
+      url: "#!",
       icon: {
         name: "product"
       }
     },
     {
       text: "Industry Solutions",
-      url: "http://google.com",
+      url: "#!",
       icon: {
         name: "industries"
       }
     },
     {
       text: "Training and Certification",
-      url: "http://google.com",
+      url: "#!",
       icon: {
         name: "training",
         background: "circle"
@@ -512,7 +512,7 @@
     },
     {
       text: "Vision and Technology",
-      url: "http://google.com",
+      url: "#!",
       icon: {
         name: "vision",
         background: "circle"
@@ -520,7 +520,7 @@
     },
     {
       text: "Services and Partners",
-      url: "http://google.com",
+      url: "#!",
       icon: {
         name: "partners",
         background: "square"
@@ -528,7 +528,7 @@
     },
     {
       text: "Career Opportunities",
-      url: "http://google.com",
+      url: "#!",
       icon: {
         name: "careers",
         background: "square"
